# DjangoSkillboxProject

./: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
mysite/database/: db.sqlite3
mysite/mysite/: settings.py
